# seapopym

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
AI/: WORKFLOW_STATE.md
HOW_TO_ADD_CONTENT/: index.html
about/citation/: index.html
about/contributing/: index.html
about/license/: index.html
api/seapopym/: index.html
api/seapopym-optimization/: index.html
docs/: HOW_TO_ADD_CONTENT.md  index.md
docs/about/: citation.md  contributing.md  license.md
docs/api/: seapopym-optimization.md  seapopym.md
docs/examples/: basic-example.md
docs/getting-started/: installation.md  quickstart-optimization.md  quickstart.md
docs/images/: README.md
docs/notebooks/: README.md  example_1d_model.ipynb  optimization_example.ipynb
docs/scripts/: README.md
docs/user-guide/: configuration.md  core-model.md
examples/basic-example/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/quickstart-optimization/: index.html
images/: index.html
notebooks/: index.html
notebooks/example_1d_model/: example_1d_model.ipynb  index.html
notebooks/optimization_example/: index.html
paper_workflow/: README.md
scripts/: index.html
search/: search_index.json
user-guide/configuration/: index.html
user-guide/core-model/: index.html
