[project]
name = "seapopym-workspace"
version = "0.1.0"
description = "SeapoPym: Spatial Ecosystem And POpulation DYnamics Model - Production Repository"
authors = [
    { name = "Jules Lehodey", email = "lehodey.jules+seapopym@gmail.com" }
]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = [
    "packages/seapopym",
    "packages/seapopym-optimization"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-jupyter>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false


